Bug #39438 (Fatal error: Out of memory)